# clipbro

./: Cargo.toml  README.md
plans/: 001-fix-entry-id-collisions.md  002-enforce-max-entries.md  003-ci-and-zero-warnings.md  004-repo-claude-md.md  005-overlay-open-latency.md  006-cache-paused-state.md  007-private-file-permissions.md  008-validate-hotkey-config.md  009-image-decode-limits.md  010-extract-overlay-pure-logic.md  011-spike-full-history-search.md  012-design-favorite-ordering.md  013-fix-log-truncation.md  014-spike-xwayland-image-clipboard.md  015-reap-overlay-and-surface-wl-copy-errors.md  README.md
src/: app.rs  clipboard.rs  config.rs  daemon.rs  db.rs  dbus.rs  entry.rs  main.rs  overlay.rs  systemd.rs
