[package]
name = "clipbro"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "A standalone clipboard manager daemon with hotkey-triggered overlay"
repository = "https://github.com/jdoss/clipbro"

[dependencies]
clap = { version = "4", features = ["derive"] }
zbus = "5"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled-sqlcipher"] }
oo7 = "0.6"
nucleo = "0.5"
chrono = { version = "0.4", default-features = false, features = ["now"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "6"
rand = "0.9"
thiserror = "2"
libc = "0.2.184"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
ureq = "3.3"
syntect = { version = "5.3", default-features = false, features = ["default-themes", "regex-fancy"] }
two-face = "0.5"
tree-sitter = "0.26"
tree-sitter-json = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-yaml = "0.7"
tree-sitter-toml-ng = "0.7"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["tokio", "wayland", "winit"]
